# simple-semaphore

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
examples/: main.rs
src/: lib.rs
