[package]
name = "simple-semaphore"
description = "🔐 A lightweight implementation of a Semaphore in Rust"
authors = ["Krypton <root@krypton.ninja>"]
version = "1.0.0"
documentation = "https://docs.rs/simple-semaphore"
categories = ["asynchronous", "concurrency"]
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/examples/**",
    "/src/**",
]
keywords = ["algorithm", "twitter"]
repository = "https://github.com/kkrypt0nn/simple-semaphore"
edition = "2024"
